feat: arrumando estrutura do ticket service